api-pos-gateway/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-pos-gateway
  namespace: prod-sc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-pos-gateway
  template:
    metadata:
      labels:
        app: api-pos-gateway
    spec:
      containers:
        - name: api-pos-gateway
          image: cthadeu/api-pos-sc-gateway:0.3.1
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
      imagePullSecrets:
        - name: cthadeu-dockerhub
---
apiVersion: v1
kind: Service
metadata:
  name: api-pos-gateway-service
  namespace: prod-sc
spec:
  selector:
    app: api-pos-gateway
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
